# PLUDOS

./: .gitignore  ANALYTICS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  OPERATIONS.md  OVERVIEW.md  QUICKSTART.md  README.md  build_pludos_dashboard.py  central-compose.yaml  client.py  compose.yaml  data-engine.py  jetson-compose.yaml  mock_stm32.py  patch_main.py  patch_main_logic.py  pyproject.toml  requirements.txt  server.py
.claude/: claude_code_workflow.md
.claude/skills/pludos-alumet/: SKILL.md
.claude/skills/pludos-c-review/: SKILL.md
.claude/skills/pludos-podman-jetson/: SKILL.md
.claude/skills/pludos-stm32-cubemx/: SKILL.md
.github/: copilot-instructions.md
STM_Shuttles/: .project  CLAUDE.md
STM_Shuttles/PLUDOS_Edge_Node/: .cproject  .mxproject  .project  OVERVIEW.md  PLUDOS_Edge_Node Debug.launch  PLUDOS_Edge_Node.ioc  STM32U585AIIXQ_FLASH.ld
STM_Shuttles/PLUDOS_Edge_Node/Core/Inc/: main.h  mx_wifi_conf.h  ota.h  psram.h  sensors.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  wifi_credentials.h.example
STM_Shuttles/PLUDOS_Edge_Node/Core/Src/: main.c  ota.c  psram.c  sensors.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
STM_Shuttles/PLUDOS_Edge_Node/Debug/: PLUDOS_Edge_Node.elf  PLUDOS_Edge_Node.list  PLUDOS_Edge_Node.map  makefile  objects.list  sources.mk
STM_Shuttles/PLUDOS_Edge_Node/Debug/Core/Src/: cJSON.cyclo  cJSON.su  main.cyclo  main.d  main.su  stm32u5xx_hal_msp.cyclo  stm32u5xx_hal_msp.su  stm32u5xx_it.cyclo  stm32u5xx_it.su  subdir.mk
STM_Shuttles/PLUDOS_Edge_Node/Debug/Drivers/BSP/B-U585I-IOT02A/: b_u585i_iot02a.cyclo  b_u585i_iot02a.d  b_u585i_iot02a.su  b_u585i_iot02a_bus.cyclo  b_u585i_iot02a_bus.d  b_u585i_iot02a_bus.su  subdir.mk
STM_Shuttles/PLUDOS_Edge_Node/Debug/Drivers/STM32U5xx_HAL_Driver/Src/: subdir.mk
STM_Shuttles/PLUDOS_Edge_Node/Drivers/BSP/B-U585I-IOT02A/: b_u585i_iot02a_bus.c  b_u585i_iot02a_bus.h
STM_Shuttles/PLUDOS_Edge_Node/tools/: coap_udp_monitor.py
STM_Shuttles/PLUDOS_Edge_Node/tools/patches/: README.md  patch_main.py  patch_main_logic.py
client/: .env  .env.example  CLAUDE.md  Containerfile  OVERVIEW.md  REBUILD.md  __init__.py  anomaly.py  anomaly_cnn.py  client.py  compose.yaml  data-engine.py  drain_receiver.py  ota_server.py  requirements.txt
client/alumet-relay/: Containerfile  OVERVIEW.md  entrypoint.sh
client/deploy/: README.md  pludos.service
client/firmware/: manifest.example.json
client/grafana/dashboards/: pludos_edge_pipeline.json  pludos_system_monitor.json
client/grafana/provisioning/dashboards/: pludos.yaml
client/grafana/provisioning/datasources/: influxdb.yaml
docs/: ANALYTICS.md  ARCHITECTURE_AND_CONFIG.md  DATA_GUIDE.md  DEPLOYMENT_3JETSON.md  DEPLOYMENT_GUIDE.md  DOWNLOAD.md  JETSON_DEPENDENCIES.md  JETSON_DEPLOYMENT.md  MODULARITY_AND_PIPELINE.md  NETWORK_SETUP.md  OPS_COMMANDS.md  OVERVIEW.md  PRESENTATION.md  QUICK_REFERENCE.md  SYSTEM_OVERVIEW.md  WIFI_FIX_AND_BUILD.md  architecture.md  conventions.md  current_problems.md  decisions.md  distance_estimation.md  energy_lpm_design.md  firmware_update.md  glossary.md  hardware_refs.md  next_steps.md  parquet_schema.md  reliability.md  sampling_strategy.md  state_machine.md  wire_protocol.md
scripts/: OVERVIEW.md  calibrate_distance.py  calibrate_energy_budget.py  calibrate_movement_threshold.py
scripts/experiments/: OVERVIEW.md  t8_1_convergence.py  t8_2_energy_ablation.py  t8_3_anomaly_comparison.py  t8_4_fault_detection.py
server/: .env.example  CLAUDE.md  OVERVIEW.md  __init__.py  compose.yaml  server.py
server/alumet/: Containerfile  OVERVIEW.md  entrypoint.sh
server/deploy/: README.md  pludos-server.service
server/grafana/: OVERVIEW.md
server/grafana/dashboards/: pludos_edge_pipeline_jetson.json  pludos_jetson.json  pludos_system_monitor.json
server/grafana/provisioning/dashboards/: pludos.yaml
server/grafana/provisioning/datasources/: influxdb.yaml  influxdb_jetson.yaml
server/systemd/: pludos-server.service
server/trigger/: Containerfile  OVERVIEW.md  requirements.txt  trigger.py
tools/: OVERVIEW.md  energy_capture.py  mock_drain.py  mock_ota_stm.py  mock_stm32.py
(+28 files in other folders)
