[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pludos"
version = "1.0.0"
description = "PLUDOS Central Server"
dependencies = [
   "flwr[simulation]>=1.9.0",
    "xgboost",
    "numpy",
    "aiocoap",
    "pandas",
    "pyarrow",
    "influxdb-client",
]

[tool.flwr.app]
publisher = "ggjinalaj"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"

# -----------------------------------------------------------------------
# FEDERATION MODE 1 — Simulation (default for development / CI)
#
# `flwr run . pludos-sim` (or just `flwr run .` since it's the default)
# Runs server + N fake clients all in ONE process on the laptop.
# No Jetson hardware required. Uses the RAM-buffer Parquet files on disk.
#
# Change num-supernodes to match the number of Jetsons you want to
# simulate (each loads the same local Parquet — fine for unit tests).
# -----------------------------------------------------------------------
[tool.flwr.federations]
default = "pludos-sim"

[tool.flwr.federations.pludos-sim]
options.num-supernodes = 1

# -----------------------------------------------------------------------
# FEDERATION MODE 2 — Real deployment (physical Jetsons over Tailscale)
#
# Step-by-step — see docs/DEPLOYMENT_GUIDE.md §3.6 for full detail:
#
# 1. On the SERVER (this machine), start the SuperLink:
#      flower-superlink --insecure
#    SuperLink listens on 0.0.0.0:9091 for SuperNode and Fleet connections.
#    Open the firewall: sudo ufw allow 9091/tcp
#
# 2. On EACH JETSON, start a SuperNode pointing at the server's
#    Tailscale IP (run `tailscale ip -4` on the server to get it):
#      flower-supernode --insecure --superlink <server-tailscale-ip>:9091
#
# 3. Uncomment [tool.flwr.federations.pludos-network] below, set the
#    address to 127.0.0.1:9091 (Fleet API is on the same machine as the
#    SuperLink), then run:
#      flwr run . pludos-network
#
# Raise FL_MIN_FIT_CLIENTS in your shell to the actual number of Jetsons:
#      FL_MIN_FIT_CLIENTS=2 flwr run . pludos-network
# -----------------------------------------------------------------------
# [tool.flwr.federations.pludos-network]
# address = "127.0.0.1:9091"
# insecure = true
